--- a/tea_factory_webpage/index.html
+++ b/tea_factory_webpage/index.html
@@ -1,1 +1,209 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ceylon Green Tea Factory | Mastery in Every Leaf</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="logo">GreenLeaf Estate</div>
+        <ul class="nav-links">
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">Our Tea</a></li>
+            <li><a href="#factory">The Factory</a></li>
+            <li><a href="#ranks">Global Ranks</a></li>
+            <li><a href="#products">Collection</a></li>
+        </ul>
+    </nav>
+
+    <!-- Hero Section -->
+    <header id="hero" class="hero-section">
+        <div class="hero-content">
+            <h1>Mastery in Every Leaf</h1>
+            <p>Experience the purest tea, harvested from the misty peaks of Sri Lanka.</p>
+            <a href="#products" class="cta-button">Explore Our Collection</a>
+        </div>
+    </header>
+
+    <!-- About Tea Section -->
+    <section id="about" class="section about-section">
+        <div class="container">
+            <h2 class="section-title">The Art of Tea</h2>
+            <p class="section-subtitle">Discover the distinct characters of our harvest.</p>
+            <div class="tea-grid">
+                <div class="tea-card">
+                    <h3>Green Tea</h3>
+                    <p>Unoxidized and fresh, preserving the natural antioxidants and delicate grassy notes.</p>
+                </div>
+                <div class="tea-card">
+                    <h3>Black Tea</h3>
+                    <p>Fully oxidized, rich and robust. The classic morning cup with deep malty flavors.</p>
+                </div>
+                <div class="tea-card">
+                    <h3>White Tea</h3>
+                    <p>Minimal processing, made from young buds. Subtle, sweet, and floral elegance.</p>
+                </div>
+                <div class="tea-card">
+                    <h3>Oolong Tea</h3>
+                    <p>Semi-oxidized, offering a complex profile somewhere between green and black tea.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Factory Section -->
+    <section id="factory" class="section factory-section">
+        <div class="factory-content-wrapper">
+            <div class="factory-text">
+                <h2 class="section-title light-text">Behind the Scenes</h2>
+                <p>Our factory combines century-old traditions with modern precision. From withering the fresh leaves to the final rolling and drying, every step is monitored to ensure perfection.</p>
+                <ul class="process-steps">
+                    <li><strong>Plucking:</strong> Only two leaves and a bud.</li>
+                    <li><strong>Withering:</strong> Removing moisture naturally.</li>
+                    <li><strong>Rolling:</strong> Twisting the leaves to release flavor.</li>
+                    <li><strong>Drying:</strong> Firing to lock in the aroma.</li>
+                </ul>
+            </div>
+            <div class="factory-image-container">
+                <!-- Image set via CSS background or we can use img tag. Using CSS background for full coverage effect -->
+            </div>
+        </div>
+    </section>
+
+    <!-- World Ranks Section -->
+    <section id="ranks" class="section ranks-section">
+        <div class="container">
+            <h2 class="section-title">World's Top Tea Producers</h2>
+            <p class="section-subtitle">We are proud to contribute to the global tea heritage.</p>
+            <div class="rank-table-wrapper">
+                <table class="rank-table">
+                    <thead>
+                        <tr>
+                            <th>Rank</th>
+                            <th>Country</th>
+                            <th>Specialty</th>
+                            <th>Global Share</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="rank-num">1</td>
+                            <td>China</td>
+                            <td>Green, Pu-erh, Oolong</td>
+                            <td>40%</td>
+                        </tr>
+                        <tr>
+                            <td class="rank-num">2</td>
+                            <td>India</td>
+                            <td>Assam, Darjeeling (Black)</td>
+                            <td>20%</td>
+                        </tr>
+                        <tr>
+                            <td class="rank-num">3</td>
+                            <td>Kenya</td>
+                            <td>CTC Black Tea</td>
+                            <td>10%</td>
+                        </tr>
+                        <tr>
+                            <td class="rank-num">4</td>
+                            <td>Sri Lanka</td>
+                            <td>Ceylon Black & White</td>
+                            <td>6%</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <!-- Product Showcase -->
+    <section id="products" class="section product-section">
+        <div class="container">
+            <h2 class="section-title">Our Premium Collection</h2>
+            <div class="product-showcase-layout">
+                <div class="product-featured-image">
+                    <img src="assets/products_bg.png" alt="Tea Collection">
+                </div>
+                <div class="product-details">
+                    <h3>Imperial Selection</h3>
+                    <p>Hand-picked and artistically blended. Our Imperial Selection represents the pinnacle of our factory's output.</p>
+                    <ul class="product-list">
+                        <li>
+                            <span>Golden Tips</span>
+                            <span class="price">$45.00</span>
+                        </li>
+                        <li>
+                            <span>Emerald Green</span>
+                            <span class="price">$32.00</span>
+                        </li>
+                        <li>
+                            <span>Royal Earl Grey</span>
+                            <span class="price">$28.00</span>
+                        </li>
+                    </ul>
+                    <button class="cta-button">View Full Shop</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Contact Section -->
+    <section id="contact" class="section contact-section">
+        <div class="container">
+            <h2 class="section-title">Get in Touch</h2>
+            <p class="section-subtitle">We would love to hear from you.</p>
+            <div class="contact-form-wrapper">
+                <form id="contactForm" class="contact-form">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required placeholder="Your Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required placeholder="Your Message"></textarea>
+                    </div>
+                    <button type="submit" class="cta-button">Send Message</button>
+                    <div id="formStatus" class="form-status"></div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+
+    <footer>
+        <div class="container footer-content">
+            <div class="footer-col">
+                <h4>GreenLeaf Estate</h4>
+                <p>Cultivating excellence since 1924.</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact</h4>
+                <p>info@greenleaftea.com</p>
+                <p>+94 11 234 5678</p>
+            </div>
+            <div class="footer-col">
+                <h4>Visit Us</h4>
+                <p>Hill Country Road, Nuwara Eliya, Sri Lanka</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 GreenLeaf Estate. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
