--- a/product/AI Text-to-Speech.html
+++ b/product/AI Text-to-Speech.html
@@ -203,7 +203,7 @@
             vis.classList.remove('invisible');
 
             const tonePrompt = tones.find(t => t.label === selectedTone).prompt;
-            const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent?key=${apiKey}`;
+            const url = "https://dahan-tts-api.cjproproducts.workers.dev";
 
             try {
                 const response = await fetch(url, {
@@ -269,3 +269,4 @@
     </script>
 </body>
 </html>
+
